--- a/new.html
+++ b/new.html
@@ -12,7 +12,7 @@
 <body>
  
 <div class="container">
-  <h2>Card titles, text, and links</h2>
+  <h2>changes titles, text, and links</h2>
   <p>Use .card-title to add card titles to any heading element. The .card-text class is used to remove bottom margins for a p element if it is the last child (or the only one) in card-body. The .card-link class adds a blue color to any link, and a hover effect.</p>
   <div class="card">
     <div class="card-body">
